# select-bq

./: .gitignore  .safe-bq.example.yaml  .select-bq.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/rules/: safe-bigquery.mdc  select-bigquery.mdc
src/safe_bq/: __init__.py  allowlist.py  cli.py  validator.py
src/select_bq/: __init__.py  cli.py  logger.py
