[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-bq"
version = "0.1.0"
description = "Safe BigQuery CLI wrapper - SELECT-only queries with allowlist and audit logging"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlglot>=24.0",
    "pyyaml>=6.0",
]

[project.scripts]
safe-bq = "safe_bq.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
